--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   device_preview: ^1.1.0
   cupertino_icons: ^1.0.2
   flutter_staggered_animations: ^1.1.1
+  simple_animations: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
